Fixed cart card alignments

--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -56,7 +56,7 @@
 }
 
 .cart-card{
-    height: 180px;
+    height: auto;
     margin: 1rem 0;
     padding: 1rem;
     box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.1);
@@ -135,6 +135,7 @@ button{
         flex-direction: column;
         width: 90%;
         overflow-x: hidden;
+        gap: 1.5rem;
     }
 
     .cart-items{
@@ -143,8 +144,9 @@ button{
     }
 
     .cart-total{
-        width: 80%;
+        width: 90%;
         margin: auto;
+        height: auto;
     }
 
     .cart-card-image>img{
@@ -154,7 +156,7 @@ button{
     }
 
     .cart-card{
-        height: 120px;
+        height: auto;
         margin: 1rem 0;
         padding: 1rem;
         width: auto;
@@ -175,6 +177,24 @@ button{
     .product-details{
         gap: 0.3rem;
     }
+
+    .product-action{
+        gap: 0.3rem;
+        padding-bottom: 0rem;
+    }
+
+    .product-quantity{
+        font-size: 1rem;
+        gap: 0.3rem;
+    }
     
+    .product-quantity>button{
+        padding: 2px 7px;
+        border-radius: 5px;
+    }
     
+    .product-delete>button{
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
 }
